--- a/intro.html
+++ b/intro.html
@@ -30,7 +30,7 @@
             
                 <h2>About me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem officia? Veritatis in odit
-                    modi cum unde iure soluta eius.</p>
+                    modi cum unde iure soluta Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore adipisci fuga vel sit non odio voluptates, iure velit in excepturi?</p>
                  
                     <div class="skill">
                         <h1>My skill</h1>
