--- a/intro.html
+++ b/intro.html
@@ -19,6 +19,7 @@
                     <li><a href="/services.HTML">Services</a> </li>
                     <li><a href="/blog.HTML">Blog </a></li>
                     <li><a href="/contact.HTML">Contact Me</a> </li>
+                    <li><a href="/project.html">Projects</a> </li>
                 </ul>
             </nav>
         </div>
