--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="/services.html">Services</a> </li>
                     <li><a href="/blog.html">Blog </a></li>
                     <li><a href="/contact.html">Contact Me</a> </li>
+                    <li><a href="/project.html">Projects</a> </li>
                 </ul>
             </nav>
         </div>
